fix: update background color for Today component in dark mode

--- a/src/output.css
+++ b/src/output.css
@@ -1175,6 +1175,11 @@ video {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-slate-700:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:stroke-gray-50:is(.dark *) {
   stroke: #f9fafb;
 }
